--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "app.js",
+    "start": "nodemon app.js",
     "dev": "nodemon app.js ",
     "test": "jest --coverage --ignore='node"
   },
